--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,12 @@
     <h1>My Cart</h1>
   </header>
 
+    
+  <% if cart.size == 0%>
+      <%= " This is a friendly message to let you know your cart is empty"%>
+      <%= link_to 'Home', '/' %>
+   
+  <%else%> 
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -33,6 +39,7 @@
     </table>
   </div>
 
+
   <div class="row">
     <div class="col-xs-12">
       <%= form_tag orders_path do %>
@@ -49,5 +56,5 @@
       <% end %>
     </div>
   </div>
-
+ <% end %>
 </section>
