started to add rating features

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,11 @@
         </dl>
       </div>
     </div>
-
+  <div class="reviews"> 
+    <% if (reviews > 0) %>
+      <%= render @reviews %>
+    <% end %>
+  </div>
   </article>
 
 </section>
