seeded reviews, and made it show up

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,8 +26,11 @@
       </div>
     </div>
   <div class="reviews"> 
-    <% if (reviews > 0) %>
-      <%= render @reviews %>
+    <% @product.reviews.each do |review| %>
+      <dt>Ratings</dt>
+      <dd><%= review.rating %></dd>
+      <dt>Review</dt>
+      <dd><%= review.description %></dd>
     <% end %>
   </div>
   </article>
