--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -49,7 +49,7 @@
           data-name="Jungle"
           data-description="Khurram Virani's Jungle Order"
           data-locale="auto"
-          data-email= <%= current_user.email%>
+          data-email= <%= current_user.nil? ? "" : current_user.email %>
           data-currency="cad">
         </script>
       <% end %>
